// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getVector3([1, 2, 3]) 1`] = `
Vector3 {
  "x": 1,
  "y": 2,
  "z": 3,
}
`;

exports[`getVector3([1, 2]) 1`] = `
Vector3 {
  "x": 1,
  "y": 0,
  "z": -2,
}
`;
